# bgutil-ytdlp-pot-provider

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  getpot_bgutil.py  package.json  tsconfig.json  tsconfig.tsbuildinfo  youtube.cookie  yt-dlp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  release.yml  test.yml
plugin/: .gitignore  pyproject.toml
plugin/yt_dlp_plugins/extractor/: getpot_bgutil.py  getpot_bgutil_http.py  getpot_bgutil_script.py
server/: eslint.config.mjs  package.json
server/src/: generate_once.ts  main.ts  session_manager.ts  version.ts
src/: main.ts  session_manager.ts
tmp/: a.diff
